src/test/deca/context/invalid/Objet/ListDeclClass-BadField.deca
// Description:
//      Accessing a non declared field
//
// Results:
//      RUle (3.70) Field not found
//
// History:
//      created on 17/1/2022

class A {
    int x;
}

{
    A a = new A();
    print(a.y);
}